sumo/tests/netgen/junction_types/errors/junction_type_actuated_tls/random/errors.netgen
Warning: The traffic light '1' has no incoming edges; it will not be build.
Warning: Could not build traffic lights '1'
